--- a/app/elements/logis/job-batch.html
+++ b/app/elements/logis/job-batch.html
@@ -106,7 +106,7 @@ Copyright © HatioLab Inc. All rights reserved.
          */
         gridConfig: {
           type: Object,
-          value: function() {
+          value: function () {
             return {
               options: {
                 checkBar: {
@@ -158,7 +158,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _onGridDataChanged: function(event) {
+      _onGridDataChanged: function (event) {
         var grid = this.$['grid'].getGridObject();
 
         if (grid) {
@@ -174,10 +174,10 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _onGridConfigure: function(event) {
+      _onGridConfigure: function (event) {
         var grid = this.$['grid'];
 
-        grid._onGridCheckCellClicked = function(grid, rowIndex) {
+        grid._onGridCheckCellClicked = function (grid, rowIndex) {
           var cRow = grid.getCheckedRows();
 
           // 어떤 행이 체크된 상태에서 다른 행의 체크셀을 체크하지않고 그 주변 영역을 클릭했을 때는 반응하지 않도록
@@ -200,7 +200,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _gridColumnDoubleClicked: function(event) {
+      _gridColumnDoubleClicked: function (event) {
         var index = event.detail.index;
 
         if (index.column.name() == 'id') {
@@ -226,9 +226,9 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param {String} status 작업 배치 상태
        * @param {String} jobType 작업 배치의 작업 유형
        */
-      changeButtonStatus: function(status, jobType) {
+      changeButtonStatus: function (status, jobType) {
 
-        var btns = this.buttons.map(function(b) {
+        var btns = this.buttons.map(function (b) {
           if (!status || status === '') {
             b.hidden = false;
             return Object.assign(new Object(), b);
@@ -259,7 +259,7 @@ Copyright © HatioLab Inc. All rights reserved.
           }
         });
 
-        btns.map(function(b) {
+        btns.map(function (b) {
           if (jobType === 'RTN' || jobType === 'RTN3') {
             if (b.id === 'copy_region-btn' || b.id === 'merge_batch-btn') {
               b.hidden = true;
@@ -282,7 +282,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event 라우트 변경 이벤트
        */
-      _handlerRouteChange: function(event) {
+      _handlerRouteChange: function (event) {
         this.refreshData();
       },
 
@@ -291,7 +291,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _onReceiveOrderTap: function(event) {
+      _onReceiveOrderTap: function (event) {
         var title = Things.DataGlobal.t(event.detail.text);
         var searchFormData = this.$['search-form'].serializeMyForm();
         var jobDate = searchFormData.job_date;
@@ -331,7 +331,7 @@ Copyright © HatioLab Inc. All rights reserved.
             title: title,
             text: text,
             showCancelButton: true
-          }, function() {
+          }, function () {
             ajax.resourceId = areaCd + '/' + stageCd + '/' + comCd + '/' + jobDate;
             ajax.generateRequest();
           });
@@ -343,7 +343,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _onCancelBatchTap: function(event) {
+      _onCancelBatchTap: function (event) {
         var row = this._checkedGridRow();
 
         if (row) {
@@ -359,7 +359,7 @@ Copyright © HatioLab Inc. All rights reserved.
             title: title,
             text: text,
             showCancelButton: true
-          }, function() {
+          }, function () {
             ajax.resourceId = batchId;
             ajax.generateRequest();
           }.bind(this));
@@ -371,7 +371,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _onOrderPreprocessTap: function(event) {
+      _onOrderPreprocessTap: function (event) {
         var title = Things.DataGlobal.t(event.detail.text);
         var row = this._checkedGridRow();
 
@@ -398,7 +398,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _onJobInstructTap: function(event) {
+      _onJobInstructTap: function (event) {
         var title = Things.DataGlobal.t(event.detail.text);
         var checkedRow = this._checkedGridRow();
 
@@ -416,7 +416,7 @@ Copyright © HatioLab Inc. All rights reserved.
                     method: "GET",
                     contentType: "application/json",
                     resourceUrl: "job_batches/running_batch/:id",
-                    resourceId: checkedRow.stage_cd + "/" + checkedRow.equip_type + "/" + (checkedRow.equip_cd ? checkedRow.equip_cd : "null")
+                    resourceId: checkedRow.stage_cd + "/" + checkedRow.equip_type + "/" + checkedRow.equip_group + "/" + (checkedRow.equip_cd ? checkedRow.equip_cd : "null")
                   };
 
                   var runningJobAjax = this.create('things-ajax', props);
@@ -444,7 +444,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _checkAndRequestInstructJob: function(event) {
+      _checkAndRequestInstructJob: function (event) {
         var checkedRow = event.target.checkedRow;
         var msg = (event.detail && event.detail.id) ?
           Things.DataGlobal.t('text.does_sure_to_merge') :
@@ -456,7 +456,7 @@ Copyright © HatioLab Inc. All rights reserved.
           type: 'warning',
           title: msg,
           showCancelButton: true
-        }, function() {
+        }, function () {
           this._requestDpsQpsInstructJob(checkedRow);
         }.bind(this));
       },
@@ -466,7 +466,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _requestDpsQpsInstructJob: function(checkedRow) {
+      _requestDpsQpsInstructJob: function (checkedRow) {
         var props = {
           id: "instruct-job-ajax",
           method: "POST",
@@ -505,7 +505,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _onMergeBatchTap: function(event) {
+      _onMergeBatchTap: function (event) {
         var checkedRow = this._checkedGridRow();
 
         if (checkedRow) {
@@ -523,7 +523,7 @@ Copyright © HatioLab Inc. All rights reserved.
             this.fire('things-open-popup-view', {
               view: mergePopup,
               modal: true,
-              closeCallback: function() {
+              closeCallback: function () {
                 this.$['search-form'].submitMyForm();
               }.bind(this)
             });
@@ -536,7 +536,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _onCancelInstructJobTap: function(event) {
+      _onCancelInstructJobTap: function (event) {
         var title = Things.DataGlobal.t(event.detail.text);
         this._confirmTransaction(event.detail.id, 'cancel-instruct-job-ajax', title);
       },
@@ -546,7 +546,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _onJobCompleteTap: function(event) {
+      _onJobCompleteTap: function (event) {
         var checkedRow = this._checkedGridRow();
         var title = checkedRow ? '[' + checkedRow.region_nm + '] ' : '';
         title += Things.DataGlobal.t(event.detail.text);
@@ -559,7 +559,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _onGroupCompleteTap: function(event) {
+      _onGroupCompleteTap: function (event) {
         var checkedRow = this._checkedGridRow();
         var title = Things.DataGlobal.t(event.detail.text);
         this._showButton('group_complete-btn', false);
@@ -572,7 +572,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param {String} btnId
        * @param {Boolean} enabled
        */
-      _showButton: function(btnId, enabled) {
+      _showButton: function (btnId, enabled) {
         var button = this._getButtonElement(btnId);
         if (button) {
           button.hidden = !enabled;
@@ -585,7 +585,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param {String} btnId
        * @return 그룹 완료 버튼 엘리먼트
        */
-      _getButtonElement: function(btnId) {
+      _getButtonElement: function (btnId) {
         return this.querySelector('#' + btnId);
       },
 
@@ -594,7 +594,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} e
        */
-      _onCopyRegion: function(e) {
+      _onCopyRegion: function (e) {
         e.preventDefault();
         var checkedRow = this._checkedGridRow();
 
@@ -610,7 +610,7 @@ Copyright © HatioLab Inc. All rights reserved.
               view: copyRegionPopup,
               modal: true,
               dialogSize: 'large',
-              closeCallback: function() {
+              closeCallback: function () {
                 this.refreshData();
               }.bind(this)
             });
@@ -628,12 +628,12 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _openReceiveOrderPopup: function(event) {
+      _openReceiveOrderPopup: function (event) {
         var receiptSummary = event.detail;
 
         // 1. 수신할 주문이 없는 경우
         if (receiptSummary.status == 'F') {
-          setTimeout(function() {
+          setTimeout(function () {
             this.openInfoMsg({
               type: 'info',
               title: '수신할 주문이 없습니다.',
@@ -660,7 +660,7 @@ Copyright © HatioLab Inc. All rights reserved.
           this.fire('things-open-popup-view', {
             view: simpleReceiveOrderPopup,
             modal: true,
-            closeCallback: function() {
+            closeCallback: function () {
               searchForm.submitMyForm();
             }
           });
@@ -680,7 +680,7 @@ Copyright © HatioLab Inc. All rights reserved.
           this.fire('things-open-popup-view', {
             view: receiveOrderPopup,
             modal: true,
-            closeCallback: function() {
+            closeCallback: function () {
               searchForm.submitMyForm();
             }
           });
@@ -692,7 +692,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _transactionCompleted: function(event) {
+      _transactionCompleted: function (event) {
         var text = Things.DataGlobal.t('text.processed_msg');
         this.openInfoMsg({
           type: 'info',
@@ -707,7 +707,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _transactionFailed: function(event) {
+      _transactionFailed: function (event) {
         this.openConfirmMsg({
           type: 'error',
           title: Things.DataGlobal.t('title.error'),
@@ -720,7 +720,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _jobCompleteResponsed: function(event) {
+      _jobCompleteResponsed: function (event) {
         this._showButton('job_complete-btn', true);
 
         if (event.detail.result === 'ng') {
@@ -730,7 +730,7 @@ Copyright © HatioLab Inc. All rights reserved.
             text: Things.DataGlobal.t('text.Sure to Complete'),
             showCancelButton: true
 
-          }, function() {
+          }, function () {
             var checkedRow = this._checkedGridRow();
             var ajax = document.createElement('things-ajax');
             ajax.resourceId = checkedRow.id;
@@ -738,7 +738,7 @@ Copyright © HatioLab Inc. All rights reserved.
             ajax.resourceAction = 'update';
             ajax.resourceUrl = 'job_batch/:id/force_complete_batch';
 
-            ajax.addEventListener('things-ajax-response', function(event) {
+            ajax.addEventListener('things-ajax-response', function (event) {
               if (event.detail.result === 'ok') {
                 this._transactionCompleted(event);
               } else {
@@ -757,7 +757,7 @@ Copyright © HatioLab Inc. All rights reserved.
       /**
        * @description 작업 완료 요청 에러 발생시 작업 완료 버튼을 다시 활성화 함
        */
-      _jobCompleteError: function() {
+      _jobCompleteError: function () {
         this._showButton('job_complete-btn', true);
       },
 
@@ -766,7 +766,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _groupCompleteResponsed: function(event) {
+      _groupCompleteResponsed: function (event) {
         this._showButton('group_complete-btn', true);
 
         if (event.detail.result === 'ng') {
@@ -776,7 +776,7 @@ Copyright © HatioLab Inc. All rights reserved.
             text: Things.DataGlobal.t('text.Sure to Complete'),
             showCancelButton: true
 
-          }, function() {
+          }, function () {
             var checkedRow = this._checkedGridRow();
             var ajax = this.$['group-complete-batch-ajax'];
             ajax.resourceId = checkedRow.id;
@@ -795,7 +795,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _groupCompleteError: function(event) {
+      _groupCompleteError: function (event) {
         this._showButton('group_complete-btn', true);
       },
 
@@ -805,13 +805,13 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _transactionInstructRegionCheckCompleted: function(event) {
+      _transactionInstructRegionCheckCompleted: function (event) {
         // 가상 호기가 아니면 작업 지시 팝업 open
         if (event.detail.virtual_flag == false) {
           var checkedRow = this._checkedGridRow();
           var jobInstructPopup = this.createBatchInstructPopup(checkedRow);
 
-          var closeCallback = function() {
+          var closeCallback = function () {
             this.refreshData();
           }.bind(this);
 
@@ -837,7 +837,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param {String} ajaxId Ajax Id
        * @param {String} title 트랜잭션 확인용 타이틀
        */
-      _confirmTransaction: function(buttonId, ajaxId, title) {
+      _confirmTransaction: function (buttonId, ajaxId, title) {
         var checkedRow = this._checkedGridRow();
         if (checkedRow) {
           if (this._checkTransactionEnabled(buttonId, checkedRow.status)) {
@@ -854,7 +854,7 @@ Copyright © HatioLab Inc. All rights reserved.
                 showCancelButton: true,
                 closeOnConfirm: false
 
-              }, function() {
+              }, function () {
                 this.openConfirmMsg({
                   type: 'info',
                   title: Things.DataGlobal.t('text.Server Processing'),
@@ -865,7 +865,7 @@ Copyright © HatioLab Inc. All rights reserved.
                 ajax.resourceId = checkedRow.id;
                 ajax.generateRequest();
 
-              }.bind(this), function() {
+              }.bind(this), function () {
                 if (buttonId === 'job_complete-btn' || buttonId === 'group_complete-btn') {
                   this._showButton(buttonId, true);
                 }
@@ -881,7 +881,7 @@ Copyright © HatioLab Inc. All rights reserved.
        *****************
        * @return {Object} 그리드에 체크된 행 데이터
        */
-      _checkedGridRow: function() {
+      _checkedGridRow: function () {
         var resourceGrid = this.$.grid;
         var rows = resourceGrid.getGridObject().getCheckedRows();
 
@@ -897,7 +897,7 @@ Copyright © HatioLab Inc. All rights reserved.
             closeOnConfirm: true,
             showCancelButton: false
 
-          }, function() {
+          }, function () {
             this._showButton('job_complete-btn', true);
             this._showButton('group_complete-btn', true);
 
@@ -914,7 +914,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param {String} title
        * @return {Object} 작업 병합 팝업
        */
-      newMergeBatchPopup: function(batch, title) {
+      newMergeBatchPopup: function (batch, title) {
         var mergeBatchPopup = document.createElement('job-batch-detail');
         mergeBatchPopup.title = title + ' (' + batch.job_id + ')';
         mergeBatchPopup.sourceBatch = batch;
@@ -930,7 +930,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param {String} status 배치 상태
        * @return {Boolean} 작업 처리 가능 여부
        */
-      _checkTransactionEnabled: function(buttonId, status) {
+      _checkTransactionEnabled: function (buttonId, status) {
         // '주문 수신', '주문 가공', '작업 지시' 시 작업 배치 상태 체크
         if (buttonId == 'receive_order-btn' || buttonId == 'order_preprocess-btn' || buttonId == 'job_instruct-btn') {
           // 이미 완료되었습니다.
@@ -999,7 +999,7 @@ Copyright © HatioLab Inc. All rights reserved.
             this.openInfoMsg({
               title: Things.DataGlobal.t('title.info'),
               text: Things.DataGlobal.t('text.process_is_not_running')
-            }, function() {
+            }, function () {
               this._showButton('job_complete-btn', true);
               this._showButton('group_complete-btn', true);
             }.bind(this));
@@ -1017,7 +1017,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param {Object} jobBatch
        * @return 주문 가공 완료 팝업 화면
        */
-      createBatchInstructPopup: function(jobBatch) {
+      createBatchInstructPopup: function (jobBatch) {
         var completePopup = null;
 
         // 1. 작업 지시 팝업 생성
@@ -1045,7 +1045,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @description 데이터 새로 조회
        * ***********************
        */
-      refreshData: function() {
+      refreshData: function () {
         if (this.initialSearchFlag) {
           var searchForm = this.getResourceSearchForm();
           if (this.initialSearchParams) {
