--- a/app/elements/base/ind-config-set.html
+++ b/app/elements/base/ind-config-set.html
@@ -22,7 +22,7 @@ Copyright © HatioLab Inc. All rights reserved.
 
 <link rel="import" href="../../bower_components/things-content/things-menu-grid-content-behavior.html">
 
-<link rel="import" href="./ind-config-set-popup.html">
+<link rel="import" href="./job-ind-config-set-popup.html">
 
 <!--
 	설정 관리 > 지시기 설정 셋
